--- a/scss/vars.scss
+++ b/scss/vars.scss
@@ -1,5 +1,5 @@
-$body-font: "Source Sans Pro", Helvetica, Arial, sans-serif;
-$reem-font: "Reem Kufi";
+$black: #000;
+$white: #fff;
 $dark: #515150;
 $light: #d9d9d7;
 $blue: #14a1d0;
@@ -8,10 +8,5 @@ $red: #E22900;
 $peach: #EEE7D5;
 $aqua: #81c7e3;
 $grey: #cdcdcd;
-$white: #fff;
-$nav-link-hover: #737372;
-$hero-height: 515px;
-$content-width: 844px;
-$box-width: 320px;
-$sticky-header-height: 66px;
-$site-thumbs: url(../images/thumbs-169x133.jpg);
+$body-font: "Open Sans", Helvetica, Arial, sans-serif;
+$body-color: $black;
